--- a/test.html
+++ b/test.html
@@ -7,75 +7,354 @@
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
       <script src="option.js"></script>
       <script src="question.js"></script>
       <script src="game.js"></script>
+
+      <style>
+        #gameContainer{
+          height:100vh;
+        }
+        .option-card{
+          transition: transform .2s;
+        }
+        .option-card:hover{
+          transform: scale(1.1);
+          border: 2px solid blue;
+        }
+
+        .wizard .nav-link{
+          width:2em;
+          height:2em;
+          border-radius: 2em;
+          color:grey;
+          border: 2px solid grey;
+          padding:0.1em 0 0 0;
+          pointer-events: none;
+
+        }
+
+        .wizard{
+          clear:both;
+          z-index:5;
+          position: relative;
+          margin-top: 5em;
+          border-bottom:0;
+        }
+
+        .progress{
+          margin-top:-1.6em;
+          z-index:-3;
+          height:0.7em;
+        }
+        .wizard .nav-link.active{
+          font-size: 1em;
+          color:#428bca;
+          border-color:#428bca;
+
+        }
+
+
+      </style>
    </head>
    <body>
 
-     <div id="gameContainer"></div>
+     <div id="gameContainer" class="container-fluid bg-info"></div>
 
       <script>
         const inputJson={
-           "questions":[
-              {
-                 "id":0,
-                 "label":"നിങ്ങളുടെ വീട്ടിൽ എത്ര പേർ ഉണ്ട്?",
-                 "headImage":"images/member.png",
-                 "category":"വീട്ടിൽ",
-                 "options":[
-                    {
-                       "id":0,
-                       "label":"1-3",
-                       "score":0,
-                       "image":"images/members1.png",
-                       "unitConsumption":1,
-                       "feedback":"feedback"
-                    },
-                    {
-                       "id":1,
-                       "label":"4-6",
-                       "score":0,
-                       "image":"images/members2.png",
-                       "unitConsumption":1,
-                       "feedback":"feedback"
-                    },
-                    {
-                       "id":2,
-                       "label":"> 6",
-                       "score":0,
-                       "image":"images/members3.png",
-                       "unitConsumption":1,
-                       "feedback":"feedback"
-                    }
-                 ]
-              },
-              {
-                 "id":1,
-                 "label":"നിങ്ങൾ കുളിക്കുന്നത് എങ്ങനെ?",
-                 "headImage":"images/shower.png",
-                 "category":"ഷവർ",
-                 "options":[
-                    {
-                       "id":0,
-                       "label":"ബക്കറ്റും മഗ്ഗും ഉപയോഗിച്ച്",
-                       "score":0,
-                       "image":"images/bucket.jpeg",
-                       "unitConsumption":1,
-                       "feedback":"feedback"
-                    },
-                    {
-                       "id":1,
-                       "label":"ഷവർ  ഉപയോഗിച്ച് ",
-                       "score":0,
-                       "image":"images/shower.jpeg",
-                       "unitConsumption":1,
-                       "feedback":"feedback"
-                    }
-                 ]
-              }
-           ]
-        };
+          "title": "ജല ബഡ്ജറ്റ് വീട്ടിലു",
+          "descHeading": 'നിങ്ങളുടെ ജല ഉപയോഗം എത്ര?',
+          "description": 'നിങ്ങളുടെ മൊത്തം ജല ഉപയോഗം കണക്കാക്കാൻ ഈ കാൽക്കുലേറ്റർ നിങ്ങളെ സഹായിക്കുന്നു. ടാപ്പിൽ നിന്നും വെള്ളം വരുന്നുണ്ടെന്ന് നിങ്ങൾക്കറിയാം, എന്നാൽ നിങ്ങളുടെ വീടിനകത്തും പുറത്തുമായി  എത്ര ജലം ഉപയോഗിക്കുന്നു എന്ന് നിങ്ങൾക്കറിയാമോ? ഒട്ടും താമസിക്കാതെതന്നെ അത് നിങ്ങൾ കണ്ടെത്തും. അതിനായ് നിങ്ങൾ തുടങ്ങുക.',
+        	"questions": [{
+        			"id": 0,
+        			"label": "നിങ്ങളുടെ വീട്ടിൽ എത്ര പേർ ഉണ്ട്?",
+        			"options": [{
+        					"id": 0,
+        					"label": "1-3",
+        					"score": 0,
+        					"image": "images/members1.png",
+        					"unitConsumption": 1,
+        					"feedback": "feedback"
+        				},
+        				{
+        					"id": 1,
+        					"label": "4-6",
+        					"score": 0,
+        					"image": "images/members2.png",
+        					"unitConsumption": 1,
+        					"feedback": ""
+        				},
+
+        				{
+        					"id": 2,
+        					"label": ">6",
+        					"score": 0,
+        					"image": "images/members3.png",
+        					"unitConsumption": 1,
+        					"feedback": ""
+        				}
+        			]
+        		},
+
+        		{
+        			"id": 1,
+        			"label": "നിങ്ങൾ കുളിക്കുന്നത് എങ്ങനെ?",
+        			"options": [{
+        					"id": 0,
+        					"label": "ബക്കറ്റും മഗ്ഗും ഉപയോഗിച്ച്",
+        					"score": "+10",
+        					"image": "images/bucket.jpeg",
+        					"unitConsumption": 25,
+        					"feedback": "ഏകദേശം 25L ലാഭം"
+        				},
+        				{
+        					"id": 1,
+        					"label": "ഷവർ  ഉപയോഗിച്ച് ",
+        					"score": "-10",
+        					"image": "images/shower.jpeg",
+        					"unitConsumption": 50,
+        					"feedback": "ഏകദേശം 25L നഷ്ടം"
+        				}
+        			]
+        		},
+        		{
+        			"id": 2,
+        			"label": "പല്ലു തേയ്ക്കുമ്പോൾ ",
+        			"options": [{
+        					"id": 0,
+        					"label": "ടാപ്പ് നേരിട്ട് ഉപയോഗിക്കുന്നു",
+        					"score": "+5",
+        					"image": "images/tap.jpeg",
+        					"unitConsumption": 5,
+        					"feedback": "ഏകദേശം 5L ലാഭം"
+        				},
+        				{
+        					"id": 1,
+        					"label": "മഗ്ഗ് ഉപയോഗിക്കുന്നു ",
+        					"score": "-5",
+        					"image": "images/mug.jpeg",
+        					"unitConsumption": 10,
+        					"feedback": "ഏകദേശം 5L നഷ്ടം"
+        				}
+        			]
+        		},
+
+        		{
+        			"id": 3,
+        			"label": "പാത്രം കഴുകുന്ന വെള്ളം?",
+        			"options": [{
+        					"id": 0,
+        					"label": "പുനരുപയോഗിക്കുന്നു",
+        					"score": "+10",
+        					"image": "images/reuse.jpg",
+        					"unitConsumption": 30,
+        					"feedback": "ഏകദേശം 30L ലാഭം"
+        				},
+        				{
+        					"id": 1,
+        					"label": "വെറുതെ പോകുന്നു ",
+        					"score": "-3",
+        					"image": "images/waste.jpg",
+        					"unitConsumption": 60,
+        					"feedback": "ഏകദേശം 30L നഷ്ടം"
+        				}
+        			]
+        		},
+
+        		{
+        			"id": 4,
+        			"label": "വാഹനം കഴുകുന്നത്?",
+        			"options": [{
+        					"id": 0,
+        					"label": "ബക്കറ്റ് മഗ്ഗ് ഉപയോഗിച്ച്",
+        					"score": "+10",
+        					"image": "images/car_bucket.jpg",
+        					"unitConsumption": 50,
+        					"feedback": "ഏകദേശം 50L ലാഭം"
+        				},
+        				{
+        					"id": 1,
+        					"label": "ഹോസ് ഉപയോഗിച്ച്",
+        					"score": "-2",
+        					"image": "images/car_hose.jpeg",
+        					"unitConsumption": 100,
+        					"feedback": "ഏകദേശം 50L നഷ്ടം"
+        				},
+        				{
+        					"id": 2,
+        					"label":"രണ്ടും ഉപയോഗിച്ചു ",
+        					"score": "-4",
+        					"image": "images/car_cleaning.png",
+        					"unitConsumption": 80,
+        					"feedback": "ഏകദേശം 30L നഷ്ടം"
+        				},
+        				{
+        					"id": 3,
+        					"label": "വാഹനം ഇല്ല",
+        					"score": "+10",
+        					"image": "images/no_vehicle.jpg",
+        					"unitConsumption": 0,
+        					"feedback": "ഏകദേശം 50L ലാഭം"
+        				}
+        			]
+        		},
+
+        		{
+        			"id": 5,
+        			"label": "ചെടി നനയ്ക്കുന്നത് എങ്ങനെ ?",
+        			"options": [{
+        					"id": 0,
+        					"label": "ബക്കറ്റ് മഗ്ഗ് ഉപയോഗിച്ച്",
+        					"score": "+10",
+        					"image": "images/bucket_water.jpeg",
+        					"unitConsumption": 40,
+        					"feedback": "ഏകദേശം 30L ലാഭം"
+        				},
+        				{
+        					"id": 1,
+        					"label": "ഹോസ് ഉപയോഗിച്ച്",
+        					"score": "-3",
+        					"image": "images/hose.jpeg",
+        					"unitConsumption": 70,
+        					"feedback": "ഏകദേശം 30L നഷ്ടം"
+        				},
+        				{
+        					"id": 2,
+        					"label":"പൂവാലി ഉപയോഗിച്ച്",
+        					"score": "+5",
+        					"image": "images/can.jpeg",
+        					"unitConsumption": 30,
+        					"feedback": "ഏകദേശം 10L ലാഭം"
+        				},
+        				{
+        					"id": 3,
+        					"label": "നനയ്ക്കുന്നില്ല ",
+        					"score": "+10",
+        					"image": "images/no-water.jpeg",
+        					"unitConsumption": 0,
+        					"feedback": "ഏകദേശം 40L ലാഭം"
+        				}
+        			]
+        		},
+        		{
+        			"id": 6,
+        			"label": "വീട്ടിലെ പൈപ്പുകൾക്കു ലീക് ഉണ്ടോ?",
+        			"options": [{
+        					"id": 0,
+        					"label": "ഉണ്ട്",
+        					"score": "-3",
+        					"image": "images/leak.jpg",
+        					"unitConsumption": 20,
+        					"feedback": "ഏകദേശം 20L നഷ്ടം"
+        				},
+        				{
+        					"id": 1,
+        					"label": "ഇല്ല ",
+        					"score": "+10",
+        					"image": "images/no-leak.jpeg",
+        					"unitConsumption": 0,
+        					"feedback": "ഏകദേശം 20L ലാഭം"
+        				}
+        			]
+        		},
+        		{
+        			"id": 7,
+        			"label": "ടോയ്‌ലെറ്റിൽ ഫ്ലഷ് സംവിധാനം ?",
+        			"options": [{
+        					"id": 0,
+        					"label": "ഡബിൾ ഫ്ലഷ് ",
+        					"score": "+5",
+        					"image": "images/dual.jpeg",
+        					"unitConsumption": 60,
+        					"feedback": "ഏകദേശം 40L ലാഭം"
+        				},
+        				{
+        					"id": 1,
+        					"label": "സിംഗിൾ ഫ്ലഷ് ",
+        					"score": "-3",
+        					"image": "images/single.jpg",
+        					"unitConsumption": 100,
+        					"feedback": "ഏകദേശം 50L നഷ്ടം"
+        				},
+
+        				{
+        					"id": 2,
+        					"label": "ഫ്ലഷ് ഇല്ല",
+        					"score": "+10",
+        					"image": "images/no-flush.jpeg",
+        					"unitConsumption": 40,
+        					"feedback": "ഏകദേശം 60L ലാഭം"
+        				}
+        			]
+        		},
+        		{
+        			"id": 8,
+        			"label": "തുണികൾ കഴുകുന്നത്?",
+        			"options": [{
+        					"id": 0,
+        					"label": "കൈകൾ ഉപയോഗിച്ച് ",
+        					"score": "+10",
+        					"image": "images/hand.jpeg",
+        					"unitConsumption": 75,
+        					"feedback": "ഏകദേശം 75L ലാഭം"
+        				},
+        				{
+        					"id": 1,
+        					"label": "വാഷിങ് മെഷീനിൽ ",
+        					"score": "-5",
+        					"image": "images/washing_mash.jpeg",
+        					"unitConsumption": 150,
+        					"feedback": "ഏകദേശം 75L നഷ്ടം"
+        				}
+        			]
+        		},
+
+        		{
+        			"id": 9,
+        			"label": "പച്ചക്കറി കഴുകുന്ന വെള്ളം?",
+        			"options": [{
+        					"id": 0,
+        					"label": "പുനരുപയോഗിക്കുന്നു",
+        					"score": "+10",
+        					"image": "images/reuse.jpg",
+        					"unitConsumption": 30,
+        					"feedback": "ഏകദേശം 30L ലാഭം"
+        				},
+        				{
+        					"id": 1,
+        					"label": "വെറുതെ പോകുന്നു ",
+        					"score": "-3",
+        					"image": "images/waste.jpg",
+        					"unitConsumption": 60,
+        					"feedback": "ഏകദേശം 30L നഷ്ടം"
+        				}
+        			]
+        		},
+        		{
+        			"id": 10,
+        			"label": "മഴ വെള്ളം സംഭരണി യൂണിറ്റ് വീട്ടിൽ ഉണ്ടോ?",
+        			"options": [{
+        					"id": 0,
+        					"label": "ഉണ്ട്",
+        					"score": "+10",
+        					"image": "images/rain.jpeg",
+        					"unitConsumption": 0,
+        					"feedback": "ഒരു വർഷം നാല് മാസത്തെ വെള്ളം ലാഭം"
+        				},
+        				{
+        					"id": 1,
+        					"label": "ഇല്ല ",
+        					"score": "-3",
+        					"image": "images/no-rain.jpg",
+        					"unitConsumption": 0,
+        					"feedback": "ഒരു വർഷം നാല് മാസത്തെ വെള്ളം നഷ്ടം"
+        				}
+        			]
+        		}
+        	]
+        }
 
 
         const game = new Game(inputJson);
