--- a/test.html
+++ b/test.html
@@ -13,22 +13,56 @@
       <script src="game.js"></script>
 
       <style>
+      @font-face {
+        font-family: RaghuMalayalam;
+        src: url(fonts/RaghuMalayalam.ttf);
+      }
+      body{
+        font-family: RaghuMalayalam;
+      }
         #gameContainer{
           height:100vh;
+          overflow:auto;
+        }
+        .bg{
+         /* background:url("images/drops.jpg"); */
+         background-size:100vw 100vh;
+
+        }
+        .game-area{
+         min-height:450px;
+         background:#d8eef0;
+         width:70%;
+         margin:auto;
+         box-shadow:-5px 6px 4px 3px #6c8cb7;
+        }
+
+        .btn-primary{
+         background-color:#003399;
+         border:2px solid #003399;
+        }
+        .btn-primary:hover{
+         background-color: white;
+         color: #003399;
+         }
+
+         .card{
+         box-shadow:-5px 5px 4px 3px #837b7b;
         }
         .option-card{
           transition: transform .2s;
         }
         .option-card:hover{
           transform: scale(1.1);
-          border: 2px solid blue;
+            border:1px solid #91aec1;
+            background-color:floralwhite;
         }
 
         .wizard .nav-link{
           width:2em;
           height:2em;
           border-radius: 2em;
-          color:grey;
+          color:black;
           border: 2px solid grey;
           padding:0.1em 0 0 0;
           pointer-events: none;
@@ -39,7 +73,7 @@
           clear:both;
           z-index:5;
           position: relative;
-          margin-top: 5em;
+          margin-top: -2.5em;
           border-bottom:0;
         }
 
@@ -55,12 +89,107 @@
 
         }
 
+        .badge-image{
+          width: 40%;
+          margin: -25% auto 0 auto;
+        }
+
+        /*wave  */
+
+
+        @keyframes move_wave {
+            0% {
+                transform: translateX(0) translateZ(0) scaleY(1)
+            }
+            50% {
+                transform: translateX(-25%) translateZ(0) scaleY(0.55)
+            }
+            100% {
+                transform: translateX(-50%) translateZ(0) scaleY(1)
+            }
+        }
+        .waveWrapper {
+            overflow: hidden;
+            position: absolute;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            top: 0;
+            margin: auto;
+        }
+        .waveWrapperInner {
+            position: absolute;
+            width: 100%;
+            overflow: hidden;
+            height: 100%;
+            bottom: -1px;
+            background-image: linear-gradient(to top, aqua 20%, white 80%);
+        }
+        .bgTop {
+            z-index: 15;
+            opacity: 0.5;
+        }
+        .bgMiddle {
+            z-index: 10;
+            opacity: 0.75;
+        }
+        .bgBottom {
+            z-index: 5;
+        }
+        .wave {
+            position: absolute;
+            left: 0;
+            width: 200%;
+            height: 100%;
+            background-repeat: repeat no-repeat;
+            background-position: 0 bottom;
+            transform-origin: center bottom;
+        }
+        .waveTop {
+            background-size: 50% 100px;
+        }
+        .waveAnimation .waveTop {
+          animation: move-wave 3s;
+           -webkit-animation: move-wave 3s;
+           -webkit-animation-delay: 1s;
+           animation-delay: 1s;
+        }
+        .waveMiddle {
+            background-size: 50% 120px;
+        }
+        .waveAnimation .waveMiddle {
+            animation: move_wave 10s linear infinite;
+        }
+        .waveBottom {
+            background-size: 50% 100px;
+        }
+        .waveAnimation .waveBottom {
+            animation: move_wave 15s linear infinite;
+        }
+
 
       </style>
    </head>
    <body>
 
-     <div id="gameContainer" class="container-fluid bg-info"></div>
+     <audio id="buttonclick" preload="auto">
+         <source src="sound/button_click.ogg">
+      </audio>
+
+      <div id="gameContainer" class="container-fluid bg pt-5 fixed-top "></div>
+
+      <div class="waveWrapper waveAnimation">
+        <div class="waveWrapperInner bgTop">
+          <div class="wave waveTop" style="background-image: url('http://front-end-noobs.com/jecko/img/wave-top.png')"></div>
+        </div>
+        <div class="waveWrapperInner bgMiddle">
+          <div class="wave waveMiddle" style="background-image: url('http://front-end-noobs.com/jecko/img/wave-mid.png')"></div>
+        </div>
+        <div class="waveWrapperInner bgBottom">
+          <div class="wave waveBottom" style="background-image: url('http://front-end-noobs.com/jecko/img/wave-bot.png')"></div>
+        </div>
+      </div>
+
 
       <script>
         const inputJson={
@@ -70,12 +199,13 @@
         	"questions": [{
         			"id": 0,
         			"label": "നിങ്ങളുടെ വീട്ടിൽ എത്ര പേർ ഉണ്ട്?",
+              "isSingle":false,
         			"options": [{
         					"id": 0,
         					"label": "1-3",
         					"score": 0,
         					"image": "images/members1.png",
-        					"unitConsumption": 1,
+        					"unitConsumption": 2,
         					"feedback": "feedback"
         				},
         				{
@@ -83,7 +213,7 @@
         					"label": "4-6",
         					"score": 0,
         					"image": "images/members2.png",
-        					"unitConsumption": 1,
+        					"unitConsumption": 5,
         					"feedback": ""
         				},
 
@@ -92,7 +222,7 @@
         					"label": ">6",
         					"score": 0,
         					"image": "images/members3.png",
-        					"unitConsumption": 1,
+        					"unitConsumption": 6,
         					"feedback": ""
         				}
         			]
@@ -101,6 +231,7 @@
         		{
         			"id": 1,
         			"label": "നിങ്ങൾ കുളിക്കുന്നത് എങ്ങനെ?",
+              "isSingle":false,
         			"options": [{
         					"id": 0,
         					"label": "ബക്കറ്റും മഗ്ഗും ഉപയോഗിച്ച്",
@@ -119,9 +250,10 @@
         				}
         			]
         		},
-        		{
+            {
         			"id": 2,
         			"label": "പല്ലു തേയ്ക്കുമ്പോൾ ",
+              "isSingle": false,
         			"options": [{
         					"id": 0,
         					"label": "ടാപ്പ് നേരിട്ട് ഉപയോഗിക്കുന്നു",
@@ -144,6 +276,7 @@
         		{
         			"id": 3,
         			"label": "പാത്രം കഴുകുന്ന വെള്ളം?",
+              "isSingle":false,
         			"options": [{
         					"id": 0,
         					"label": "പുനരുപയോഗിക്കുന്നു",
@@ -162,10 +295,10 @@
         				}
         			]
         		},
-
-        		{
+            {
         			"id": 4,
         			"label": "വാഹനം കഴുകുന്നത്?",
+              "isSingle":true,
         			"options": [{
         					"id": 0,
         					"label": "ബക്കറ്റ് മഗ്ഗ് ഉപയോഗിച്ച്",
@@ -204,6 +337,7 @@
         		{
         			"id": 5,
         			"label": "ചെടി നനയ്ക്കുന്നത് എങ്ങനെ ?",
+              "isSingle":true,
         			"options": [{
         					"id": 0,
         					"label": "ബക്കറ്റ് മഗ്ഗ് ഉപയോഗിച്ച്",
@@ -241,6 +375,7 @@
         		{
         			"id": 6,
         			"label": "വീട്ടിലെ പൈപ്പുകൾക്കു ലീക് ഉണ്ടോ?",
+              "isSingle":true,
         			"options": [{
         					"id": 0,
         					"label": "ഉണ്ട്",
@@ -262,6 +397,7 @@
         		{
         			"id": 7,
         			"label": "ടോയ്‌ലെറ്റിൽ ഫ്ലഷ് സംവിധാനം ?",
+              "isSingle":false,
         			"options": [{
         					"id": 0,
         					"label": "ഡബിൾ ഫ്ലഷ് ",
@@ -292,6 +428,7 @@
         		{
         			"id": 8,
         			"label": "തുണികൾ കഴുകുന്നത്?",
+              "isSingle":false,
         			"options": [{
         					"id": 0,
         					"label": "കൈകൾ ഉപയോഗിച്ച് ",
@@ -314,6 +451,7 @@
         		{
         			"id": 9,
         			"label": "പച്ചക്കറി കഴുകുന്ന വെള്ളം?",
+              "isSingle":false,
         			"options": [{
         					"id": 0,
         					"label": "പുനരുപയോഗിക്കുന്നു",
@@ -335,6 +473,7 @@
         		{
         			"id": 10,
         			"label": "മഴ വെള്ളം സംഭരണി യൂണിറ്റ് വീട്ടിൽ ഉണ്ടോ?",
+              "isSingle":true,
         			"options": [{
         					"id": 0,
         					"label": "ഉണ്ട്",
