--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
         const inputJson={
           "title": "ജല ബജറ്റ് വീട്ടിലും",
           "descHeading": "നിങ്ങളുടെ ജല ഉപയോഗം എത്ര?",
-          "description": "നിങ്ങളുടെ മൊത്തം ജല ഉപയോഗം കണക്കാക്കാൻ ഈ കാൽക്കുലേറ്റർ നിങ്ങളെ സഹായിക്കുന്നു. ടാപ്പിൽ നിന്നും വെള്ളം വരുന്നുണ്ടെന്ന് നിങ്ങൾക്കറിയാം, എന്നാൽ നിങ്ങളുടെ വീടിനകത്തും പുറത്തുമായി  എത്ര ജലം ഉപയോഗിക്കുന്നു എന്ന് നിങ്ങൾക്കറിയാമോ? ഒട്ടും താമസിക്കാതെതന്നെ അത് നിങ്ങൾ കണ്ടെത്തും. അതിനായി  കളി തുടങ്ങുക.",
+          "description": "നിങ്ങളുടെ മൊത്തം ജല ഉപയോഗം കണക്കാക്കാൻ ഈ കാൽക്കുലേറ്റർ നിങ്ങളെ സഹായിക്കുന്നു. ടാപ്പിൽ നിന്നും വെള്ളം വരുന്നുണ്ടെന്ന് നിങ്ങൾക്കറിയാം, എന്നാൽ നിങ്ങളുടെ വീടിനകത്തും പുറത്തുമായി  എത്ര ജലം ഉപയോഗിക്കുന്നു എന്ന് നിങ്ങൾക്കറിയാമോ? ഒട്ടും താമസിക്കാതെ തന്നെ അത് നിങ്ങൾ കണ്ടെത്തും. അതിനായി  കളി തുടങ്ങുക.",
           "audioBtn":"sound/button_click.mp3",
           "audioOptn":"sound/water_drops1.mp3",
         	"questions": [{
@@ -329,7 +329,7 @@
 
         		{
         			"id": 5,
-        			"label": "ചെടി നനയ്ക്കുക്കാൻ ഉപയോഗിക്കുന്നത്? ",
+        			"label": "ചെടി നനയ്ക്കാൻ ഉപയോഗിക്കുന്നത്? ",
         			"options": [
         				{
         					"id": 0,
@@ -359,7 +359,7 @@
         		},
         		{
         			"id": 6,
-        			"label": "വീട്ടിലെ പൈപ്പുകൾക്കു ലീക് ഉണ്ടോ?",
+        			"label": "വീട്ടിലെ പൈപ്പുകൾക്കു ലീക്ക് ഉണ്ടോ?",
         			"options": [{
         					"id": 0,
         					"label": "ഉണ്ട്",
@@ -453,7 +453,7 @@
         		},
         		{
         			"id": 10,
-        			"label": "മഴ വെള്ളം സംഭരണി യൂണിറ്റ് വീട്ടിൽ ഉണ്ടോ?",
+        			"label": "മഴവെള്ളസംഭരണി യൂണിറ്റ് വീട്ടിൽ ഉണ്ടോ?",
         			"options": [{
         					"id": 0,
         					"label": "ഉണ്ട്",
