table height adjusted

--- a/index.html
+++ b/index.html
@@ -62,6 +62,10 @@
             border:1px solid #91aec1;
             background-color:floralwhite;
         }
+        .jumbotron table{
+        	height:350px;
+        	overflow:auto !important;
+        }
 
         .wizard .nav-link{
           width:2em;
