--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
         const inputJson={
           "title": "ജല ബജറ്റ് വീട്ടിലും",
           "descHeading": "നിങ്ങളുടെ ജല ഉപയോഗം എത്ര?",
-          "description": "നിങ്ങളുടെ മൊത്തം ജല ഉപയോഗം കണക്കാക്കാൻ ഈ കാൽക്കുലേറ്റർ നിങ്ങളെ സഹായിക്കുന്നു. ടാപ്പിൽ നിന്നും വെള്ളം വരുന്നുണ്ടെന്ന് നിങ്ങൾക്കറിയാം, എന്നാൽ നിങ്ങളുടെ വീടിനകത്തും പുറത്തുമായി  എത്ര ജലം ഉപയോഗിക്കുന്നു എന്ന് നിങ്ങൾക്കറിയാമോ? ഒട്ടും താമസിക്കാതെ തന്നെ അത് നിങ്ങൾ കണ്ടെത്തും. അതിനായി  കളി തുടങ്ങുക.",
+          "description": "നിങ്ങളുടെ മൊത്തം ജല ഉപയോഗം കണക്കാക്കാൻ ഈ കാൽക്കുലേറ്റർ നിങ്ങളെ സഹായിക്കുന്നു. ടാപ്പിൽ നിന്നും വെള്ളം വരുന്നുണ്ടെന്ന് നിങ്ങൾക്കറിയാം, എന്നാൽ നിങ്ങളുടെ വീടിനകത്തും പുറത്തുമായി  എത്ര ജലം ഉപയോഗിക്കുന്നു എന്ന് നിങ്ങൾക്കറിയാമോ? ഒട്ടും താമസിക്കാതെ തന്നെ അത് നിങ്ങൾ കണ്ടെത്തും. അതിനായി  പ്രശ്‌നോത്തരി തുടങ്ങുക.",
           "audioBtn":"sound/button_click.mp3",
           "audioOptn":"sound/water_drops1.mp3",
         	"questions": [{
